<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bgrepeat"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/search"
        android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="Search"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.20"
            android:background="@color/lightblue"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onFilterClick"
            android:padding="10dp"
            android:text="@string/filter"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:background="@color/yellow"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onFavClick"
                android:padding="10dp"
                android:text="@string/favorites"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/favorite_button"
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:background="@color/yellow" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.20"
            android:background="@color/lightgreen"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onMapViewClick"
            android:padding="10dp"
            android:text="@string/mapviewbtn"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <TextView
        android:id="@+id/android:empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/main_no_items" />

</LinearLayout>